tests/errors/div_by_zero.py
# expect_error: ZeroDivisionError
print(1 / 0)
